--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="utf-8">
     <title>Sofia Sarapura</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <div>
-      <br>
-      <h1>Sofia Sarapura</h1>
-      <h2>Bienvenido a mi pagina web</h2>
-      <br>
+    <div id="bienvenida">
+      <h1><strong>Sofia Sarapura</strong></h1>
+      <h2>Bienvenido a mi pagina web!</h2>
     </div>
-    
+    <nav class="menu">
+      <ul>
+        <li><a href="#imagen1"><button type="button" class="btn btn-outline-info">IMAGEN</button></a></li>
+        <li><a href="#video1"><button type="button" class="btn btn-outline-info">VIDEO</button></a></li>
+      </ul>
+    </nav>
+    <div id="imagen1"> Imagen de un crisantemo rosa:<br>
+      <img src="assets/img/florrosa.webp" alt="flor rosa" width="600px">
+    </div>
+    <div id="video1"> Video "Think Pink":<br>
+      <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
+      
+    </div>
+  </div>
   </body>
 </html>
