--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!--Pure-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
   </head>
   <body>
     <div id="bienvenida">
@@ -16,7 +19,17 @@
     <nav class="menu">
       <ul>
         <li><a href="#imagen1"><button type="button" class="btn btn-outline-info">IMAGEN</button></a></li>
-        <li><a href="#video1"><button type="button" class="btn btn-outline-info">VIDEO</button></a></li>
+        <li><div class="dropdown">
+            <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+              VIDEO
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <li><a class="dropdown-item" href="#">video</a></li>
+              <li><a class="dropdown-item" href="#">puntuar</a></li>
+              <li><a class="dropdown-item" href="#">comentarios</a></li>
+            </ul>
+        </li>
+        </div>
         <li><a href="#familia"><button type="button" class="btn btn-outline-info">FAMILIA</button></a></li>
         <!--
         *Palabras que me gustan, con sus links que lleven a las definiciones. Algunas palabras:
@@ -36,9 +49,9 @@
         <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
         <!--para puntuar el video y dejar un comentario-->
       <p>Puntuá el video del 1 al 5:</p>
-      <form>
-        <input name="nombre" type="text" placeholder="Inserte su nombre aquí">
-      </form>
+      <form class="pure-form">
+        <input type="text" class="pure-input-rounded" alt="nombre" placeholder="Nombre y apellido"/>
+    </form>
       <button class="btn btn-outline-danger rounded-circle text-center mr-2 px-0" 
       style="width: 38px; height: 38px" href="#">1</button>
       <button class="btn btn-outline-warning rounded-circle text-center mr-2 px-0" 
@@ -54,6 +67,7 @@
         <textarea cols="45" rows="8" id="comentario" name="comentarios">
         </textarea>
         <!--falta agregar un boton de envio-->
+        <button type="submit" class="pure-button">Enviar</button>
       </form>  
     </div> 
     <!--familia-->
