--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
     <div id="video1"> Video "Think Pink":<br>
         <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
         <!--para puntuar el video y dejar un comentario-->
-      <p>Puntuá el video del 1 al 5:</p>
+      <p>Para comentar, dejanos tus datos</p>
       <form class="pure-form">
         <input type="text" class="pure-input-rounded" alt="nombre" placeholder="Nombre y apellido"/>
+        <input type="text" class="pure-input-rounded" alt="mail" placeholder="mail"/>
+        <input type="password" class="pure-input-rounded" alt="contraseña" placeholder="contraseña" />
+        <label for="default-remember">
+            <input type="checkbox" id="default-remember" /> Recuerdame
+        </label>
     </form>
       <button class="btn btn-outline-danger rounded-circle text-center mr-2 px-0" 
       style="width: 38px; height: 38px" href="#">1</button>
