--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sofia Sarapura</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- botones redes sociales -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -40,15 +41,21 @@
        -->
       </ul>
     <!--imagen--> 
-    </nav>
+    </nav> 
+    <section class="container-fluid">
     <div id="imagen1"> Imagen de un crisantemo rosa:<br>
       <img src="assets/img/florrosa.webp" alt="flor rosa" width="600px">
+    <!--COMO HAGO PARA QUE SE VEA A LA DERECHA-->  
+      <p>
+        QUIERO ESTO A LA DERECHA DE LA FOTO. O ESTO A LA IZQUIERDA Y LA FOTO A LA DERECHA.
+        </p>
     </div>
+    </section>
     <!--video-->
     <div id="video1"> Video "Think Pink":<br>
         <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
         <!--para puntuar el video y dejar un comentario-->
-      <p>Para comentar, dejanos tus datos</p>
+      <p>Para darnos tu opinion, dejanos tus datos...</p>
       <form class="pure-form">
         <input type="text" class="pure-input-rounded" alt="nombre" placeholder="Nombre y apellido"/>
         <input type="text" class="pure-input-rounded" alt="mail" placeholder="mail"/>
@@ -70,8 +77,8 @@
       <br>También podes dejarnos un comentario:<br>
       <form>
         <textarea cols="45" rows="8" id="comentario" name="comentarios">
-        </textarea>
-        <!--falta agregar un boton de envio-->
+        </textarea> <br>
+        <!--boton de envio-->
         <button type="submit" class="pure-button">Enviar</button>
       </form>  
     </div> 
