video lleva a una pagina nueva

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
               VIDEO
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <li><a class="dropdown-item" href="#">video</a></li>
-              <li><a class="dropdown-item" href="#">puntuar</a></li>
+              <li><a class="dropdown-item" href="#video1" target="_blank">video</a></li>
               <li><a class="dropdown-item" href="#">comentarios</a></li>
             </ul>
         </li>
@@ -47,7 +46,7 @@
       <img src="assets/img/florrosa.webp" alt="flor rosa" width="600px">
     <!--COMO HAGO PARA QUE SE VEA A LA DERECHA-->  
       <p>
-        QUIERO ESTO A LA DERECHA DE LA FOTO. O ESTO A LA IZQUIERDA Y LA FOTO A LA DERECHA.
+        QUIERO ESTO A LA DERECHA DE LA FOTO. O ESTO A LA IZQUIERDA Y LA FOTO A LA DERECHA.G
         </p>
     </div>
     </section>
