--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
         <!--
         *Palabras que me gustan, con sus links que lleven a las definiciones. Algunas palabras:
         - sempiterno
-        - glosolalia
-        - titiritero
         - cutre
        -->
       </ul>
@@ -47,20 +45,20 @@
     <div id="imagen1"> Imagen de un crisantemo rosa:<br>
       <img src="assets/img/florrosa.webp" alt="flor rosa" width="600px">
     <!--COMO HAGO PARA QUE SE VEA A LA DERECHA-->  
-      <p>
-        QUIERO ESTO A LA DERECHA DE LA FOTO. O ESTO A LA IZQUIERDA Y LA FOTO A LA DERECHA.G
-        </p>
     </div>
     </section>
     <!--video-->
-    <div id="video1"> Video "Think Pink":<br>
+    <div  id="video">
+    <div class="container" id="video1"> Video "Think Pink":<br>
         <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
+    </div>
         <!--para puntuar el video y dejar un comentario-->
-      <p>Para darnos tu opinion, dejanos tus datos...</p>
+    <div class="container">
+      <p><br><br>Para darnos tu opinion, dejanos tus datos...</p>
       <form class="pure-form" id="comentarios">
         <input type="text" class="pure-input-rounded" alt="nombre" placeholder="Nombre y apellido"/>
-        <input type="text" class="pure-input-rounded" alt="mail" placeholder="mail"/>
-        <input type="password" class="pure-input-rounded" alt="contraseña" placeholder="contraseña" />
+        <input type="text" class="pure-input-rounded" alt="mail" placeholder="Mail"/>
+        <input type="password" class="pure-input-rounded" alt="contraseña" placeholder="Contraseña" />
         <label for="default-remember">
             <input type="checkbox" id="default-remember" /> Recuerdame
         </label>
@@ -81,7 +79,8 @@
         </textarea> <br>
         <!--boton de envio-->
         <button type="submit" class="pure-button">Enviar</button>
-      </form>  
+      </form>
+    </div>  
     </div> 
     <!--familia-->
     <div class="row g-5" id="familia">
@@ -157,10 +156,11 @@
       <!--Palabras-->
       <div class="container col-lg-3" id="palabras">
         <div class="accordion" id="acordeon">
+          <h3>Sustantivos</h3><br>
             <div class="accordion-item">
               <h2 class="accordion-header" id="glosolalia-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#glosolalia-def" aria-expanded="true" aria-controls="glosolalia-def">
-                  glosolalia
+                  Glosolalia
                 </button>
               </h2>
                 <div id="glosolalia-def" class="accordion-collapse collapse show" aria-labelledby="glosolalia-def">
@@ -178,7 +178,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="titiritero-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#titiritero-def" aria-expanded="false" aria-controls="titiritero-def">
-                  titiritero
+                  Titiritero
                 </button>
               </h2>
               <div id="titiritero-def" class="accordion-collapse collapse" aria-labelledby="titiritero-def">
@@ -195,12 +195,55 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Accordion Item #3
+                  Picaflor
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  colibrí.<br>
+
+                  <img src="assets/img/picaflor.jpg" alt="picaflor" width="150px">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion" id="acordeon">
+            <h3>Adjetivos</h3><br>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="glosolalia-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#glosolalia-def" aria-expanded="true" aria-controls="glosolalia-def">
+                  Paradisíaca
+                </button>
+              </h2>
+                <div id="glosolalia-def" class="accordion-collapse collapse show" aria-labelledby="glosolalia-def">
+                <div class="accordion-body">
+                  Del latín tardío paradisiăcus, y este del bizantino παραδεισιακός paradeisiakós. Perteneciente o relativo al paraíso.
+                </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="titiritero-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#titiritero-def" aria-expanded="false" aria-controls="titiritero-def">
+                  Nictálope
+                </button> 
+              </h2>
+              <div id="titiritero-def" class="accordion-collapse collapse" aria-labelledby="titiritero-def">
+                <div class="accordion-body">
+                  Del lat. nyctălops, -ōpis 'que solo ve de noche'. dicho de una persona o de un animal: que ve mas de noche
+                  que de día
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                  Sempiterno
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                <div class="accordion-body">
+                  Del latin <i>sempiternus</i>. Que durará siempre; que, habiendo tenido principio, no tendrá fin.
                 </div>
               </div>
             </div>
