cambio background color y sacar background color de divs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Pure-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="ColorDeFondo">
     <div id="bienvenida">
       <h1><strong>Sofia Sarapura</strong></h1>
       <h2>¡Bienvenido a mi página web!</h2>
@@ -37,7 +37,7 @@
     <!--poema--> 
     </nav> 
     <div class="container-fluid" id="poema">
-      <div class="row align-items-center">
+      <div class="row align-items-start">
         <div id="imagen1" class="col"> 
           <img src="assets/img/narciso.jpg" alt="narcisos" width="400px">
         </div>
