--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>  
     </div> 
     <!--familia-->
-    <div class="row g-5" id="familia">
+    <div class="row g-4" id="familia">
       <div class="col-sm-4" style="max-width:300px;">
           <div class="section-title rounded h-100 p-5">
               <h5 class="position-relative d-inline-block text-info text-uppercase">familia</h5>
@@ -357,7 +357,7 @@
       * That Should Be Me - Justin Bieber<br>
       * Thinking Out Loud - Ed Sheeran
     </p>
-    <div id="carouselMusicControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselMusicControls" class="carousel slide" data-bs-ride="carousel" width="100%">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <video src="assets/video/YouBelongWithMe.mp4.mp4" class="d-block w-100" alt="You Belong With Me - Taylor Swift" type="video/mp4" controls></video>
