top margin y parrafito del video

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <nav class="menu">
       <ul>
-        <li><a href="#imagen1"><button type="button" class="btn btn-outline-info">POEMA</button></a></li>
+        <li><a href="#poema"><button type="button" class="btn btn-outline-info">POEMA</button></a></li>
         <li><div class="dropdown">
             <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
               VIDEO
@@ -33,7 +33,7 @@
         </div>
         <li><a href="#familia"><button type="button" class="btn btn-outline-info">FAMILIA</button></a></li>
         <li><a href="#palabras"><button type="button" class="btn btn-outline-info">PALABRAS</button></a></li>
-        <li><a href="#carouselMusicControls"><button type="button" class="btn btn-outline-info">MÚSICA</button></a></li>
+        <li><a href="#musica"><button type="button" class="btn btn-outline-info">MÚSICA</button></a></li>
         
       </ul>
     <!--poema--> 
@@ -94,12 +94,13 @@
   </div>
     <!--video-->
     <div  id="video">
-    <div class="container" id="video1"> Video "Think Pink":<br>
-        <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video>
-    </div>
+    <div class="container" id="video1"> <h2>Video "Think Pink":</h2><br>
+        <video src="assets/video/ThinkPink.mp4" alt="Think pink" type="video/mp4" width="600px" controls></video><br>
+        <p>Videoclip de una de las canciones de la película <i>Funny<br>Face</i> protagonizada por Audrey Hepburn y Fred Astaire.</p>
+      </div>
         <!--para puntuar el video y dejar un comentario-->
     <div class="container">
-      <p><br><br>Para darnos tu opinion, dejanos tus datos...</p>
+      <p>Para darnos tu opinion, dejanos tus datos...</p>
       <form class="pure-form" id="comentarios">
         <input type="text" class="pure-input-rounded" alt="nombre" placeholder="Nombre y apellido"/>
         <input type="text" class="pure-input-rounded" alt="mail" placeholder="Mail"/>
