corregi el acordion de tiritar

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="sempiterno-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sempiterno-def" aria-expanded="false" aria-controls="sempiterno-def">
+              <h2 class="accordion-header" id="tiritar-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#tiritar-def" aria-expanded="false" aria-controls="tiritar-def">
                   Tiritar
                 </button>
               </h2>
-              <div id="sempiterno-def" class="accordion-collapse collapse" aria-labelledby="sempiterno-def">
+              <div id="tiritar-def" class="accordion-collapse collapse" aria-labelledby="tiritar-def">
                 <div class="accordion-body">
                   Proviene de una onomatopeya y significa temblar o estremecerse de frío o por causa de fiebre, de miedo
                 </div>
